src/tui/app/snapshots/sqwai__tui__app__tests__tests__chat_activity_group_collapsed_100x30.snap
---
source: src/tui/app/tests.rs
assertion_line: 4720
expression: s
---


 › Complex task.


   ▸ activity · 6 calls · 2 thinking · 5s · 1 error
 Completed with one error.



















────────────────────────────────────────────────────────────────────────────────────────────────────
›
────────────────────────────────────────────────────────────────────────────────────────────────────
 ACT                                                          cache 0% · 0% · 0 · m  ef:off [CWD]
