src/tui/app/snapshots/sqwai__tui__app__tests__tests__chat_activity_group_collapsed_70x24.snap
---
source: src/tui/app/tests.rs
expression: s
---


 › Complex task.


   ▸ activity · 6 calls · 2 thinking · 5s · 1 error
 Completed with one error.













──────────────────────────────────────────────────────────────────────
›
──────────────────────────────────────────────────────────────────────
 ACT                   cache 0% · 0% · 0 · test-model  ef:off [CWD]
