src/tui/app/snapshots/sqwai__tui__app__tests__tests__chat_bash_running_100x30.snap
---
source: src/tui/app/tests.rs
expression: s
---


 › Run the tests.


   ⠋ bash  {"cmd":"cargo test"}




















────────────────────────────────────────────────────────────────────────────────────────────────────

────────────────────────────────────────────────────────────────────────────────────────────────────
 ACT                                               cache 0% · 0% · 0 · test-model ⠋  ef:off [CWD]
