src/tui/app/snapshots/sqwai__tui__app__tests__tests__chat_code_block_70x24.snap
---
source: src/tui/app/tests.rs
expression: s
---


 › Explain this snippet.


 Here is the explanation:

 ╭─ rust ───────────────────╮
 │   fn main() {            │
 │       println!("hello"); │
 │   }                      │
 ╰──────────────────────────╯

 The main function is the program entry point. It calls println!
 which writes to stdout. This is very idiomatic Rust and the
 canonical hello-world example.




──────────────────────────────────────────────────────────────────────

──────────────────────────────────────────────────────────────────────
 ACT                   cache 0% · 0% · 0 · test-model  th:off [CWD]
