src/tui/app/snapshots/sqwai__tui__app__tests__tests__chat_empty_100x30.snap
---
source: src/tui/app/tests.rs
assertion_line: 4492
expression: s
---


























────────────────────────────────────────────────────────────────────────────────────────────────────
›
────────────────────────────────────────────────────────────────────────────────────────────────────
 ACT                                                          cache 0% · 0% · 0 · m  ef:off [CWD]
