src/tui/app/snapshots/sqwai__tui__app__tests__tests__chat_empty_70x24.snap
---
source: src/tui/app/tests.rs
expression: s
---




















──────────────────────────────────────────────────────────────────────

──────────────────────────────────────────────────────────────────────
 ACT                   cache 0% · 0% · 0 · test-model  th:off [CWD]
