src/tui/app/snapshots/sqwai__tui__app__tests__tests__chat_models_popup_100x30.snap
---
source: src/tui/app/tests.rs
assertion_line: 4741
expression: s
---


 › Hello


 Hi there!




           ┌  Models · p  ──────────────────────────────────────────────────────────────┐
           │ m *  test-model · 1k · ef:off                                              │
           │ + add model                                                                │
           │ · switch active model                                                      │
           │ · check connection                                                         │
           │ · edit provider                                                            │
           │ · delete model                                                             │
           │ · delete provider                                                          │
           └────────────────────────────────────────────────────────────────────────────┘







────────────────────────────────────────────────────────────────────────────────────────────────────
›
────────────────────────────────────────────────────────────────────────────────────────────────────
 ACT                                                          cache 0% · 0% · 0 · m  ef:off [CWD]
