src/tui/app/snapshots/sqwai__tui__app__tests__tests__chat_models_popup_70x24.snap
---
source: src/tui/app/tests.rs
expression: s
---


 › Hello


 Hi there!


  ┌  p models  ────────────────────────────────────────────────────┐
  │ m *  test-model · ctx 1000 · th:off                            │
  │ + add model                                                    │
  │ · switch active model                                          │
  │ · edit provider                                                │
  │ · delete model                                                 │
  │ · delete provider                                              │
  └────────────────────────────────────────────────────────────────┘




──────────────────────────────────────────────────────────────────────

──────────────────────────────────────────────────────────────────────
 ACT                   cache 0% · 0% · 0 · test-model  th:off [CWD]
