src/tui/app/snapshots/sqwai__tui__app__tests__tests__chat_plan_panel_70x24.snap
---
source: src/tui/app/tests.rs
assertion_line: 4762
expression: s
---


 › What is the plan?


 See the plan panel.



  ┌  To-do  ───────────────────────────────────────────────────────┐
  │ agent to-do list                                               │
  │  1. Step 1: Analyse requirements                               │
  │  2. Step 2: Implement feature                                  │
  │  3. Step 3: Write tests                                        │
  └────────────────────────────────────────────────────────────────┘





──────────────────────────────────────────────────────────────────────
›
──────────────────────────────────────────────────────────────────────
 ACT                            cache 0% · 0% · 0 · m  ef:off [CWD]
